# WebAssemblyMonoRepo

./: README.md
CanvasInImageToWebAssembly/: README.md  READ_BOOKS.md  READ_WEBSITE.md
CanvasInImageToWebAssembly/R2ImageProcess/photon-image-process/: .gitignore  Cargo.toml
CanvasInImageToWebAssembly/R2ImageProcess/photon-image-process/src/: lib.rs
CanvasInImageToWebAssembly/image-posi-to-nega/: Cargo.toml  LICENSE_MIT
CanvasInImageToWebAssembly/image-posi-to-nega/src/: lib.rs
CanvasInImageToWebAssembly/process-image-web-assembly/: Cargo.toml
CanvasInImageToWebAssembly/process-image-web-assembly/src/: lib.rs
CanvasInImageToWebAssembly/process_ichimatsu/: Cargo.toml
CanvasInImageToWebAssembly/process_ichimatsu/src/: main.rs
CanvasInImageToWebAssembly/train-wasmer/: setup.bash  train.bash
CanvasInImageToWebAssembly/train-wasmer/train/: Cargo.toml
CanvasInImageToWebAssembly/wasm-or-js/: package-lock.json  package.json
CanvasInImageToWebAssembly/wasm-or-js/src/: App.tsx  main.tsx
CanvasInImageToWebAssembly/yew-app/: README.md  index.html
CanvasInImageToWebAssembly/yew-app/src/: main.rs
WebAssemblyLearn/: README.md  Rust-Wasm.md  setup.bash  wasm-and-ort-setup.bash
WebAssemblyLearn/model/: pyproject.toml  setup.bash
WebAssemblyLearn/model/src/model/: __init__.py
WebAssemblyLearn/wasm-and-ort/: Cargo.toml
WebAssemblyLearn/wasm-and-ort/src/: lib.rs
WebAssemblyLearn/wasm-and-ort/static/: index.html
two-lang-wasm-test/.idx/: dev.nix
two-lang-wasm-test/go-wasm/: build.bash  go.mod  main.go  output.wasm
two-lang-wasm-test/rs-wasm/: Cargo.toml
two-lang-wasm-test/vite-project/: bun.lockb  index.html  package.json
two-lang-wasm-test/vite-project/src/: main.ts
wasm-nextjs-train/: bun.lockb  next.config.mjs  package.json
wasm-nextjs-train/.idx/: dev.nix
wasm-three-d/: Cargo.toml  index.html
wasm-three-d/src/: lib.rs
wasm-worker-server-render/: Dockerfile  README.md  docker.sh
wasm-worker-server-render/.devcontainer/: devcontainer.json
wasm-worker-server-render/app/: index.wasm
wasm-worker-server-render/bashs/: build.bash
wasm-worker-server-render/src/: go.mod  main.go
webgl-wasm/: README.md
webgl-wasm/wasm-webgl/: package.json
webgl-wasm/wasm-webgl/rust-wasm-webgl/: Cargo.toml
webgl-wasm/wasm-webgl/rust-wasm-webgl/src/: lib.rs
(+7 files in other folders)
