[project]
name = "model"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tiamat-KIT", email = "c1101081@planet.kanazawa-it.ac.jp" }
]
dependencies = [
    "ultralytics>=8.1.4",
    "onnx>=1.15.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "model:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/model"]
