[package]
name = "rust-wasm-webgl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
web-sys = {version = "0.3.69",features=[
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGlRenderingContext"
]}
nalgebra = "*"

[http]
proxy = "http://wwwproxy.kanazawa-it.ac.jp:8080"
